# ESP32_Locator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  locator.html  mqtt_sub.sh  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  geolocation.c  geolocation.h  idf_component.yml  main.c  mqtt_publish.c  mqtt_publish.h  open_wifi.c  open_wifi.h  scan_store.c  scan_store.h  web_server.c  web_server.h  wifi_connect.c  wifi_connect.h  wifi_scan.c  wifi_scan.h
main/pages/: index.html
